<resources>
    <string name="app_name">Assignment2</string>
    <string name="assignment_2">Assignment 2</string>
    <string name="product_type">Product Type</string>
    <string name="manager">MANAGER</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="enter_new_quantity">Enter New Quantity</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
</resources>